Блок "Наши кейсы"

--- a/src/blocks/table/index.pug
+++ b/src/blocks/table/index.pug
@@ -1,13 +1,77 @@
 .h-scroll
-	.h-scroll__container
-		table.table
-			thead
-				tr
-					th Услуги
-					td Объем работ
-					td Сроки
-			tbody
-				tr
-					th
-					td
-					td
+  .h-scroll__container
+    table.table
+      thead
+        tr
+          th Ключевой запрос
+          td Фев
+          td Мар
+          td Апр
+          td Май
+          td Июн
+          td Июл
+      tbody
+        tr
+          th поставки из китая
+          td 4
+          td 5
+          td 4
+          td 3
+          td 3
+          td 2
+        tr
+          th экспресс доставка из китая
+          td 5
+          td 3
+          td 3
+          td 3
+          td 4
+          td 2
+        tr
+          th срочная доставка из китая
+          td 2
+          td 1
+          td 1
+          td 2
+          td 2
+          td 2
+        tr
+          th доставка самолетом из китая
+          td 4
+          td 2
+          td 2
+          td 2
+          td 2
+          td 2
+        tr
+          th доставка грузов из китая самолетом
+          td 7
+          td 5
+          td 4
+          td 5
+          td 5
+          td 5
+        tr
+          th доставка из китая жд
+          td 1
+          td 3
+          td 3
+          td 3
+          td 2
+          td 3
+        tr
+          th доставка грузов из китая морем
+          td 2
+          td -
+          td -
+          td 2
+          td 4
+          td 3
+        tr
+          th доставка из китая морем
+          td 2
+          td -
+          td -
+          td 1
+          td 1
+          td 3
