--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,12 +18,13 @@ block content
         | Продвижение на особых условиях 
         p.-c-primary за заявку, отправленную прямо здесь и сейчас
       include ../../blocks/form/index
-  .wide-block.-no-padding-bottom
+  .wide-block.-half-padding-bottom
     .page-container
       h2.-ta-c
         | Тарифы
       include ../../blocks/table-compare/index
-  .wide-block
+  .wide-block.-half-padding-top.wide-block--cases-fon
     .page-container
-      h2
+      h2.-ta-lc
         | Наши кейсы
+      include ../../blocks/our-cases/index
