--- a/src/scss/_css-variables.scss
+++ b/src/scss/_css-variables.scss
@@ -31,6 +31,7 @@
   --font-size--small:       12px;
   --font-size--medium:      14px;
   --font-size:              16px;
+  --font-size--vast:        16px;
   --font-size--large:       18px;
 
 
@@ -62,6 +63,7 @@
     --font-size--small:     14px;
     --font-size--medium:    15px;
     --font-size:            16px;
+    --font-size--vast:      18px;
     --font-size--large:     18px;
 
 
