--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -29,3 +29,4 @@
 @import '../blocks/h-scroll/style';
 @import '../blocks/table-compare/style';
 @import '../blocks/table/style';
+@import '../blocks/our-cases/style';
