--- a/src/blocks/our-services/index.pug
+++ b/src/blocks/our-services/index.pug
@@ -1,5 +1,5 @@
 -
-	let dataAchievements = [
+	let dataServices = [
 		{
 			"title": 'Продвижение сайтов',
 			"price": 'от 63 000 руб.',
@@ -17,7 +17,7 @@
 		}
 	]
 .tile-slider.tile-slider--place-shadow.our-services(data-flickity-options='{ "cellAlign": "left", "prevNextButtons": true, "groupCells": true, "watchCSS": true, "lazyLoad": true }')
-	each item, i in dataAchievements
+	each item, i in dataServices
 		.our-services__item
 			.our-services__title !{item.title}
 			.our-services__price !{item.price}
