--- a/src/scss/_modifiers.scss
+++ b/src/scss/_modifiers.scss
@@ -9,6 +9,12 @@
 .-ta-l { text-align: left; }
 .-ta-c { text-align: center !important; }
 .-ta-r { text-align: right; }
+.-ta-lc {
+	text-align: center;
+	@media (min-width: $screen-md) {
+    text-align: left; 
+	}
+}
 
 .-fs-tiny { font-size: var(--font-size--tiny) }
 .-fs-small { font-size: var(--font-size--small) }
@@ -19,6 +25,8 @@
 .-no-margin { margin: 0; }
 .-no-padding { padding: 0; }
 .-no-padding-bottom { padding-bottom: 0 !important; }
+.-half-padding-top { padding-top: 1rem !important; }
+.-half-padding-bottom { padding-bottom: 2rem !important; }
 
 .-ws-nowrap { white-space: nowrap }
 
