--- a/src/blocks/our-services/index.pug
+++ b/src/blocks/our-services/index.pug
@@ -16,7 +16,7 @@
 			"image": "assets/seo-audit.png"
 		}
 	]
-.tile-slider.tile-slider--place-shadow.our-services(data-flickity-options='{ "cellAlign": "left", "prevNextButtons": true, "groupCells": true, "watchCSS": true, "lazyLoad": true }')
+.tile-slider.tile-slider--place-shadow.our-services(data-flickity-options='{ "cellAlign": "left", "prevNextButtons": false, "groupCells": true, "watchCSS": true, "lazyLoad": true }')
 	each item, i in dataServices
 		.our-services__item
 			.our-services__title !{item.title}
