--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -30,3 +30,4 @@
 @import '../blocks/table-compare/style';
 @import '../blocks/table/style';
 @import '../blocks/our-cases/style';
+@import '../blocks/case-slider/style';
