--- a/src/blocks/our-cases/style.scss
+++ b/src/blocks/our-cases/style.scss
@@ -1,5 +1,8 @@
 .our-cases {
-  display: block;
+  &__item {
+    display: block;
+    width: 100%;
+  }
   &__info {
     font-weight: 300;
     font-size: var(--font-size--vast);
@@ -10,7 +13,6 @@
   &__img {
     background-color: var(--color-white);
     border-left: 10px solid var(--color-mint);
-    box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
     border-radius: 20px;
     padding: 1em 0.5em;
   }
@@ -23,17 +25,19 @@
     } 
   }
   @media (min-width: $screen-xl) {
-    display: flex;
-    align-items: center;
+    &__item {
+      display: flex;
+      align-items: center;
+    }
     &__info {
       flex: 1 0 40%;
       margin-right: 5%;
       margin-bottom: 0;
     }
     &__img {
-      flex: 0 0 60%;
+      flex: 0 0 50%;
 			margin-top: 0;
-			max-width: 60%;
+			max-width: 50%;
       padding: 2em 1.5em;
     }
   }
