--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -34,6 +34,7 @@ html(class="page" lang="en")
       
       block footer
         +page-footer('page__footer')
-
-  script(src="js/libs.min.js")
-  script(src="js/main.js")
+  
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
+    script(src="js/libs.min.js")
+    script(src="js/main.js")
