--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -28,3 +28,8 @@ block content
       h2.-ta-lc
         | Наши кейсы
       include ../../blocks/our-cases/index
+  .wide-block.wide-block--gradient
+    .page-container
+      h2.-ta-cl
+        | Наши преимущества
+      include ../../blocks/our-advantages/index
