--- a/src/scss/_modifiers.scss
+++ b/src/scss/_modifiers.scss
@@ -15,6 +15,12 @@
     text-align: left; 
 	}
 }
+.-ta-cl {
+	text-align: center;
+	@media (min-width: $screen-lg) {
+    text-align: left; 
+	}
+}
 
 .-fs-tiny { font-size: var(--font-size--tiny) }
 .-fs-small { font-size: var(--font-size--small) }
