--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -31,3 +31,4 @@
 @import '../blocks/table/style';
 @import '../blocks/our-cases/style';
 @import '../blocks/case-slider/style';
+@import '../blocks/our-advantages/style';
