--- a/src/blocks/page-container/style.scss
+++ b/src/blocks/page-container/style.scss
@@ -8,6 +8,11 @@
 	width: 100%;
 }
 
+.page__breadcrumb {
+	padding-top: 1.5em;
+	padding-bottom: 1em;
+}
+
 .page-container__form {
 	margin-left: auto;
 	margin-right: auto;
