--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -32,3 +32,4 @@
 @import '../blocks/our-cases/style';
 @import '../blocks/case-slider/style';
 @import '../blocks/our-advantages/style';
+@import '../blocks/breadcrumb/style';
