--- a/src/blocks/main-menu/style.scss
+++ b/src/blocks/main-menu/style.scss
@@ -37,7 +37,7 @@
 			overflow: hidden;
 
 			& > #{$block-name}__list {
-				margin-top: -100vh;
+				margin-top: 0;
 				transition: var(--transition-time);
 			}
 
@@ -49,7 +49,7 @@
 		&__list {
 
 			&--lvl3 {
-				padding: .5em 1.5em .75em calc(2.5em + 18px + .75em);
+				padding: 0;
 			}
 		}
 
