--- a/src/blocks/page-nav/style.scss
+++ b/src/blocks/page-nav/style.scss
@@ -1,7 +1,8 @@
 .page-nav {
+  box-shadow: inset 0 -7px 5px -10px rgba(0, 0, 0, .5);
   &__inner {
     padding-top: 0.75em;
-    padding-bottom: 0.75em;
+    padding-bottom: 1.25em;
     display: flex;
     align-items: center;
     justify-content: space-between;
