--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -27,7 +27,12 @@ html(class="page" lang="en")
   
   body
     .page__inner
+
       +page-header('page__header')
+
+      block breadcrumb
+        .page__breadcrumb.page-container
+          include ../blocks/breadcrumb/index
       
       main.page__content
         block content
